<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Retrieve__Username"
    android:background="@color/darkWhite">

    <RelativeLayout
        android:id="@+id/headerBar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/unionBank__background">

        <ImageView
            android:id="@+id/prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="18sp"
            android:layout_marginTop="15sp"
            android:contentDescription="@string/Home"
            android:src="@drawable/previcon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/R00Header"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15sp"
            android:layout_marginRight="12dp"
            android:contentDescription="@string/Home"
            android:src="@drawable/smalllogo" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/Userdata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerBar"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/R1" />
        <!--this is the material design outlined EditText with helper text-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/accountNumber"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14sp"
            android:text="@string/R2" />
        <!--this is the material design outlined EditText with helper text-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastFourDigit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14sp"
            android:text="@string/R3" />
        <!--this is the material design outlined EditText with helper text-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Cvv"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14sp"
            android:text="@string/R4" />
        <!--this is the material design outlined EditText with helper text-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/Userdata"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/R5" />
        <TextView
            android:id="@+id/df"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/R6"
            android:layout_below="@+id/d"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            style="@style/MyButtonStyle"
            android:layout_width="310dp"
            android:layout_height="55dp"
            android:layout_marginTop="40sp"
            android:layout_below="@+id/d"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/darkBlue"
            android:gravity="center"
            android:text="@string/continueBtn"
            android:textColor="@color/white"
            android:textStyle="normal"
            app:textAllCaps="false">

        </com.google.android.material.button.MaterialButton>

    </RelativeLayout>
</RelativeLayout>