<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@color/unionBank__background">


         <RelativeLayout
            android:id="@+id/headpanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:layout_marginStart="20sp"
            android:layout_marginTop="40sp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/homeicon"
                android:contentDescription="@string/Home"
                />
            <TextView
                android:id="@+id/topPanel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Home"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:contentDescription="@string/Home"
                android:layout_marginStart="32dp"
                android:layout_marginTop="6dp"
                android:textStyle="normal" />

        </RelativeLayout>


    <RelativeLayout
        android:id="@+id/Logo"
        android:layout_width="401dp"
        android:layout_height="56dp"
        android:layout_above="@id/Userdata"
        android:layout_marginBottom="51dp"
        android:gravity="center"
        android:textAlignment="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Home"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/logoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/Home"
            android:text="@string/logoHead"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/Userdata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonRow"
        android:layout_marginBottom="40dp"
        android:orientation="vertical">
                <TextView
                    android:layout_width="103dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:layout_marginTop="10dp"
                    android:text="Username"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    />
        <!--this is the material design outlined EditText with helper text-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/Username"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--this is the material design outlined EditText with helper text-->

                <TextView
                    android:layout_width="103dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    android:text="Password"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:passwordToggleEnabled="true"
            android:hint="@string/Password"
            android:textColorHint="@color/white">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginBtn"
                style="@style/MyButtonStyle"
                android:layout_width="263dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:text="@string/Sign_In"
                android:textColor="#0C8FC5"
                app:textAllCaps="false">

            </com.google.android.material.button.MaterialButton>


            <RelativeLayout
                android:id="@+id/forgotOption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginBtn"
                android:layout_marginTop="25sp"
                android:layout_marginBottom="15dp">

                <TextView
                    android:id="@+id/forgotUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="45dp"
                    android:text="@string/forgot_Username"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/forgotOptionLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="20sp"
                    android:layout_marginEnd="47dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:textStyle="normal" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgotOption">

                <ImageView
                    android:id="@+id/fingerprint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:contentDescription="@string/Fingerprint"
                    android:src="@drawable/fingerprint" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="18dp"
                android:text="@string/Find_Us"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:text="@string/Get_Help"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="normal" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>